--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,7 @@ name = "ttail"
 version = "0.1.0"
 edition = "2021"
 authors = ["Dmitri Tchebotarev <dmitri@tchebotarev.com>"]
-
-
+license-file = "LICENSE"
+description = "Small program to display last N lines of output."
+repository = "github.com/DTchebotarev/ttail"
+readme = "README.md"
